mysql-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
spec:
  selector:
    app: mysql-master
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
