mysql-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave
spec:
  selector:
    app: mysql-slave
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
