service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tpcloud-service
spec:
  selector:
    app: tpcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
