ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tpcloud-ingress
spec:
  rules:
    - host: tpcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tpcloud-service
                port:
                  number: 80
